Bug 1280805 - Don't assert in the valid case where the child process gets an event with an input block id but no mHandledByAPZ. r=rbarker

MozReview-Commit-ID: 9L4xdnoSJ0p